--- a/tmux.conf
+++ b/tmux.conf
@@ -41,3 +41,6 @@ bind-key -t vi-copy 'y' copy-selection
 
 # save history to file
 bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
+
+# also clear tmux history wit C-l
+bind -n C-l send-keys C-l \; clear-history
