--- a/tmux.conf
+++ b/tmux.conf
@@ -32,6 +32,9 @@ bind-key -n C-j detach
 # start numbering of windows on 1
 set -g base-index 1
 
+# ignore ESC (useful for neovim)
+set -g escape-time 0
+
 # vi-like copy
 set-window-option -g mode-keys vi
 unbind p
@@ -42,5 +45,5 @@ bind-key -t vi-copy 'y' copy-selection
 # save history to file
 bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
 
-# also clear tmux history wit C-l
+# also clear tmux history with C-l
 bind -n C-l send-keys C-l \; clear-history
