--- a/.config/termite/config
+++ b/.config/termite/config
@@ -9,7 +9,7 @@ allow_bold = true
 dynamic_title = true
 urgent_on_bell = true
 clickable_url = true
-font = Inconsolata 14
+font = Inconsolata for Powerline 16
 scrollback_lines = 10000
 search_wrap = true
 #icon_name = terminal
