--- a/tmux.conf
+++ b/tmux.conf
@@ -33,8 +33,9 @@ set -g escape-time 0
 
 # vi-like copy
 set-window-option -g mode-keys vi
-unbind p
-bind p paste-buffer
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-selection-and-cancel
+bind-key -T copy-mode-vi 'r' send-keys -X rectangle-toggle
 
 # save history to file
 bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
