Update alacritty and tmux, remove old files

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,7 +13,7 @@ bind -n M-Down select-pane -D
 
 setw -g monitor-activity on
 
-set-window-option -g window-status-current-bg yellow
+set-window-option -g window-status-current-style bg=yellow
 
 set -g default-terminal "screen-256color"
 
