--- a/tmux.conf
+++ b/tmux.conf
@@ -1,10 +1,14 @@
-# fix prefix key
+# change prefix key
 unbind C-b
 set -g prefix C-a
 
 bind-key a send-prefix
 
 set -g history-limit 20000
+
+set-option -g focus-events on
+set -g default-terminal "tmux-256color"
+set -sa terminal-overrides ",xterm-256color:RGB"
 
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
@@ -21,8 +25,8 @@ set -g default-terminal "screen-256color"
 bind -n S-down new-window
 bind -n S-left prev
 bind -n S-right next
-bind -n C-left swap-window -t -1
-bind -n C-right swap-window -t +1
+bind-key -n C-Left swap-window -t -1\; select-window -t -1
+bind-key -n C-Right swap-window -t +1\; select-window -t +1
 bind-key -n C-j detach
 
 # start numbering of windows on 1
